--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -7,20 +7,23 @@
 </head>
 
 <body ng-controller="View2Ctrl">
-  <fieldset id="fields-list">
+    
+       <fieldset id="fields-list">
+
+
     <div class="pure-g entry" ng-repeat="input in inputs track by input['id']">
       <div class="pure-u-1-5" layout-gt-sm="row">
-
+<form name="myForm" novalidate"> 
 <md-input-container class="md-block pure-input-1" id="input" name="input-1" required>
             <label>URL</label>
-            <input ng-model="webservice.url">
+            <input class ="form-control" ng-model="input.url" required>
           </md-input-container> 
 <md-input-container class="md-block" >
             <label>Schedule(mins)</label>
-            <input name="mins" ng-model="webservice.mins" placeholder="30" ng-pattern="/^[0-9]$/" md-maxlength="2">   
-<md-button ng-click="loading(webservice.url)">Test Now</md-button>
+            <input class ="form-control" ng-model="input.mins" placeholder="30" ng-pattern="/^[0-9]$/" md-maxlength="2" /> 
+
+<md-button ng-click="loading(input.url)">Test Now</md-button>
 <md-button ng-click="remove(input['id'])">delete</md-button>
-<!--<md-progress-circular ng-show="loading" md-mode="indeterminate"></md-progress-circular>-->
 <md-progress-circular md-mode="indeterminate" ng-show="isLoading"></md-progress-circular>
       </div>
 
@@ -29,8 +32,9 @@
 
     </div>
   </fieldset>
-</body>
+
 <md-button class="md-raised" ng-click="add()">Add</md-button>
-
-
+<md-button class="md-raised" ng-click="save()">Save</md-button>
+</form>
+</body>
 </html>
