Saving Services data inside User for static User

--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -20,7 +20,7 @@
           </md-input-container> 
 <md-input-container class="md-block" >
             <label>Schedule(mins)</label>
-            <input class ="form-control" ng-model="input.mins" placeholder="30" ng-pattern="/^[0-9]$/" md-maxlength="2" /> 
+            <input class ="form-control" ng-model="input.scheduledMin" placeholder="30" ng-pattern="/^[0-9]$/" md-maxlength="2" /> 
 
 <md-button ng-click="loading(input.url)">Test Now</md-button>
 <md-button ng-click="remove(input['id'])">delete</md-button>
