:gem: Basic Login Page

--- a/app/index.html
+++ b/app/index.html
@@ -22,14 +22,6 @@
     <li><a href="#!/view2">Web Service</a></li>
   </ul>-->
 
- <md-content class="md-padding">
-    <md-nav-bar md-selected-nav-item="currentNavItem" nav-bar-aria-label="navigation links">
-      <md-nav-item md-nav-click="goto('#!/view1')" name="page1"><a style="text-decoration:none" href="#!/view1">Database</a></md-nav-item>
-      <md-nav-item md-nav-click="goto('view2')" name="page2"><a style="text-decoration:none" href="#!/view2">Web Service</md-nav-item>    
-      
-    </md-nav-bar>
-   
-  </md-content>
 
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -59,8 +51,10 @@
   <script src="app.js"></script>
   <script src="view1/view1.js"></script>
   <script src="view2/view2.js"></script>
+  <script src="login/login.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
 </body>
 </html>
+
